--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -1,4 +1,4 @@
-МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ
+<center>МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ
 
 РОССИЙСКОЙ ФЕДЕРАЦИИ
 
@@ -10,7 +10,7 @@
 
 Факультет автоматики и вычислительной техники
 
-Кафедра систем автоматизации управления
+Кафедра систем автоматизации управления</center>
 
 Дата сдачи на проверку:
 
