--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -10,7 +10,7 @@
 
 Факультет автоматики и вычислительной техники
 
-Кафедра систем автоматизации управления</center>
+Кафедра систем автоматизации управления
 
 Дата сдачи на проверку:
 
