--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -1,42 +1,42 @@
-<center>МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ
+<p align=center>МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО ОБРАЗОВАНИЯ
 
-РОССИЙСКОЙ ФЕДЕРАЦИИ
+<p align=center>РОССИЙСКОЙ ФЕДЕРАЦИИ
 
-ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ ВЫСШЕГО ОБРАЗОВАНИЯ
+<p align=center>ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ ОБРАЗОВАТЕЛЬНОЕ УЧРЕЖДЕНИЕ ВЫСШЕГО ОБРАЗОВАНИЯ
 
-«ВЯТСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ»
+<p align=center>«ВЯТСКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ»
 
-Институт математики и информационных систем
+<p align=center>Институт математики и информационных систем
 
-Факультет автоматики и вычислительной техники
+<p align=center>Факультет автоматики и вычислительной техники
 
-Кафедра систем автоматизации управления
+<p align=center>Кафедра систем автоматизации управления
 
-Дата сдачи на проверку:
+<p align=right>Дата сдачи на проверку:
 
-«___» __________ 2021 г.
+<p align=right>«___» __________ 2021 г.
 
-Проверено:
+<p align=right>Проверено:
 
-«___» __________ 2021 г.
+<p align=right>«___» __________ 2021 г.
 
-Методы формирования html5 документов
+<p align=center>Методы формирования html5 документов
 
-Отчет по лабораторной работе № 1
+<p align=center>Отчет по лабораторной работе № 1
 
-по дисциплине
+<p align=center>по дисциплине
 
-«Основы frontend-разработки и организации человеко-машинного интерфейса»
+<p align=center>«Основы frontend-разработки и организации человеко-машинного интерфейса»
 
-Вариант 6
+<p align=center>Вариант 6
 
-Разработал студент гр. ИТб-1301-01-00 ________________ /Кислицын И.А./
+<p align=center>Разработал студент гр. ИТб-1301-01-00 ________________ /Кислицын И.А./
 
-Проверил ст. преподаватель _________________ /Земцов М.А./
+<p align=center>Проверил ст. преподаватель _________________ /Земцов М.А./
 
-Работа защищена с оценкой «___________» «___» __________ 2021 г.
+<p align=center>Работа защищена с оценкой «___________» «___» __________ 2021 г.
 
-Киров 2021
+<p align=center>Киров 2021
 
 ------
 
