--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -109,33 +109,32 @@
 
 Рисунок 2 - задание для фрейма таблицы
 
-В соответствии с номером варианта была реализована HTML-страница index4.html, представляющая структуру разделение окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм). Ссылка на данные фреймы - https://github.com/vadevid/Basic-frontend-dev-labs/tree/lab1/bfdLab/html4 . На рисунке 3 представлена HTML-страница index4.html открытая в браузере.
+По варианту была реализована HTML-страница index4.html, представляющая структуру разделения окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм). Ссылка на данные фреймы - https://github.com/vadevid/Basic-frontend-dev-labs/tree/lab1/bfdLab/html4 . На рисунке 3 представлена HTML-страница index4.html открытая в браузере.
 
 3
 
 ------
 
-[![html4](https://raw.githubusercontent.com/vadevid/Basic-frontend-dev-labs/main/image/html4.png)](https://github.com/vadevid/Basic-frontend-dev-labs/blob/main/image/html4.png)
+<p align=center><img src=./image/html4.png></p>
 
-Рисунок 3 - фреймовая реализации страницы.
+<p align=center>Рисунок 3 - фреймовая реализации страницы.
 
 После реализации набора html страниц была проведена валидация результатов с помощью https://validator.w3.org/#validate_by_input.
 
 Список допущенных ошибок базовой страницы:
 
-1. *Line 8, Column 19*: **there is no attribute "ROWS"**
-2. *Line 8, Column 27*: **element "FRAMESET" undefined**
-3. *Line 10, Column 20*: **there is no attribute "COLS"**
-4. *Line 10, Column 28*: **element "FRAMESET" undefined**
-5. *Line 11, Column 30*: **element "FRAMESET" undefined**
-6. *Line 12, Column 20*: **there is no attribute "SRC"**
-7. *Line 12, Column 42*: **there is no attribute "NAME"**
-8. *Line 12, Column 50*: **element "FRAME" undefined**
-9. *Line 13, Column 48*: **element "FRAME" undefined**
-10. *Line 15, Column 49*: **element "FRAME" undefined**
-11. *Line 17, Column 45*: **element "FRAME" undefined**
-12. *Line 19, Column 12*: **element "NOFRAMES" undefined**
-13. *Line 22, Column 7*: **end tag for "HTML" which is not finished**
+1. *Line 8, Column 19*: **there is no attribute "COLS"**
+3. *Line 9, Column 20*: **there is no attribute "ROWS"**
+4. *Line 8 Column 28*: **element "FRAMESET" undefined**
+5. *Line 9, Column 30*: **element "FRAMESET" undefined**
+6. *Line 10, Column 20*: **there is no attribute "SRC"**
+7. *Line 10, Column 42*: **there is no attribute "NAME"**
+8. *Line 10, Column 50*: **element "FRAME" undefined**
+9. *Line 11, Column 48*: **element "FRAME" undefined**
+10. *Line 12, Column 49*: **element "FRAME" undefined**
+11. *Line 14, Column 45*: **element "FRAME" undefined**
+12. *Line 16, Column 12*: **element "NOFRAMES" undefined**
+13. *Line 19, Column 7*: **end tag for "HTML" which is not finished**
 
 Метод исправления ошибок:
 
@@ -143,31 +142,31 @@
 
 ------
 
-ошибки (1-11, 13) допущены в связи с использованием типа документа “Strict”. Для исправления ошибок необходимо использовать тип документа “Frameset”;
+ошибки (1-10, 12) допущены в связи с использованием типа документа “Strict”. Для исправления ошибок необходимо использовать тип документа “Frameset”;
 
-ошибка 12 допущена по причине неправильного расположения элемента “noframes”. Для корректной работы и успешной валидации данный элемент должен быть вложен в “frameset”.
+ошибка 11 допущена по причине неправильного расположения элемента “noframes”. Для корректной работы и успешной валидации данный элемент должен быть вложен в “frameset”.
 
 В других html страницах не было допущено ошибок.
 
-Листинг исправленной базовой страницы представлен в приложении А.
+Листинг исправленной основной страницы представлен в приложении А.
 
 Задание2: *Создайте файл index.html, используя html5 разметку. Файл должен реализовывать предыдущее задание с использованием языка html5. Готовым решением будет успешное прохождение проверки валидации.*
 
-Файл index.html успешно создан и почти в точности реализует предыдущее задание. Результат валидации представлен на рисунке 5.
+Файл index.html создан и почти в точности реализует предыдущее задание. Результат валидации представлен на рисунке 4.
 
-[![validation](https://raw.githubusercontent.com/vadevid/Basic-frontend-dev-labs/main/image/validator.png)](https://github.com/vadevid/Basic-frontend-dev-labs/blob/main/image/validator.png)
+<p align=center><img src=./image/validator.png></p>
 
-Рисунок 5 – результат валидации index.html
+<p align=center>Рисунок 4 – результат валидации index.html
 
-Листинг страницы index.html представлен в приложении Б. На рисунке 6 представлена HTML-страница index.html открытая в браузере.
+Листинг страницы index.html представлен в приложении Б. На рисунке 5 представлена HTML-страница index.html открытая в браузере.
 
 5
 
 ------
 
-[![frame-html5](https://raw.githubusercontent.com/vadevid/Basic-frontend-dev-labs/main/image/html5.png)](https://github.com/vadevid/Basic-frontend-dev-labs/blob/main/image/html5.png)
+<p align=center><img src=./image/html5.png></p>
 
-Рисунок 6 – страница index.html
+<p align=center>Рисунок 5 – страница index.html
 
 Выводы по эволюции стандарта html5 и принципов преобразования (конвертации) документов из стандарта html 4 в версию 5:
 
@@ -175,7 +174,7 @@
 
 1. Исследовать функциональные возможности инструментов разработчика на стороне браузера
 
-В рамках лабораторной работы был рассмотрен Yandex браузер на основе движка рендеринга chromium. Изучена документация по работе с devtools, а именно описание и ключевые возможности следующих панелей:
+В рамках лабораторной работы был рассмотрен Chrome браузер на основе движка рендеринга chromium. Изучена документация по работе с devtools, а именно описание и ключевые возможности следующих панелей:
 
 - панель Elements
 - панель Console
