--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -101,13 +101,13 @@
 
 Задание для 6 варианта представлено на рисунках 1 и 2.
 
-[![task1](https://raw.githubusercontent.com/vadevid/Basic-frontend-dev-labs/main/image/task1.png)](https://github.com/vadevid/Basic-frontend-dev-labs/blob/main/image/task1.png)
+<p align=center><img src=./image/task1.png></p>
 
-Рисунок 1 - задание на реализацию структуры документа через фрэйм
+<p align=center>Рисунок 1 - задание на реализацию структуры документа через фрэйм
 
-[![task2](https://raw.githubusercontent.com/vadevid/Basic-frontend-dev-labs/main/image/task2.png)](https://github.com/vadevid/Basic-frontend-dev-labs/blob/main/image/task2.png)
+<p align=center><img src=./image/task2.png></p>
 
-Рисунок 2 - задание для фрейма таблицы
+<p align=center>Рисунок 2 - задание для фрейма таблицы
 
 По варианту была реализована HTML-страница index4.html, представляющая структуру разделения окна браузера на фреймы, а также файлы содержимого отдельных фреймов (по одному на каждый фрейм). Ссылка на данные фреймы - https://github.com/vadevid/Basic-frontend-dev-labs/tree/lab1/bfdLab/html4 . На рисунке 3 представлена HTML-страница index4.html открытая в браузере.
 
