--- a/Отчёт по лабораторной работе №1.md
+++ b/Отчёт по лабораторной работе №1.md
@@ -222,7 +222,7 @@
 
 - Данные теги применяют для разделения текста. Тег p определяет текстовый абзац. Тег br предназначен для переноса текста на новую строку. Тег hr создает горизонтальную линию для тематического разделения параграфов.
 - Тег span предназначен для определения строчных элементов документа. В отличие от блочного элемента p, с помощью тега span можно выделить часть информации внутри других тегов и установить для нее свой стиль.
-- Тег b как и тег strong выделяет текст полужирным, но не придает ему важности.
+- Они оба выделяют текст пролужирным, но strong придаёт ему важности.
 
 Задание 4: *Используя методы разметки текста реализуйте текущее расписание занятий на 2 недели. При реализации необходимо чтобы ссылки на онлайн лекции были меньше и выделены жирным курсивом, фамилия преподавателя была курсивом, а название дисциплины было h4. Использованием стилей недопустимо.*
 
