--- a/Отчёт по лабораторной работе №2.md
+++ b/Отчёт по лабораторной работе №2.md
@@ -249,7 +249,282 @@
 Листинг макета html-страницы нечетный вариант lab2_index.html
 
 ```
+<!DOCTYPE html> 
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>http://example.com</title>
+</head>
+<body>
+    <header class="header">
+        <div class="header">
+            <table>
+                <tr>
+                    <td><pre>     </pre></td>
+                    <td><h2>Wonder App</h2></td>
+                    <td><pre>                                                                       </pre></td>
+                    <td><h4>Product</h4></td>
+                    <td><pre>          </pre></td>
+                    <td><h4>Solutions</h4></td>
+                    <td><pre>          </pre></td>
+                    <td><h4>Customers</h4></td>
+                    <td><pre>          </pre></td>
+                    <td><h4>Contact Us</h4></td>
+                    <td><pre>          </pre></td>
+                    <td><fieldset><h4>Get Srarted</h4></fieldset></td>
+                </tr>
+            </table>
+        </div>
+    </header>
+    <main class="page-content">   
+        <div class="title">
+            <table>
+                <tr>
+                    <td colspan="4"><pre>
 
+
+
+
+
+
+                    </pre></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td rowspan="4"><pre>          </pre></td>
+                    <td colspan="2"><h1>It's better than<br>sliced bread!</h1></td>
+                    <td rowspan="4"><pre>                                              </pre></td>
+                    <td rowspan="4"><img src=./image/img1.png alt="img"></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><h4>Tell the world how awesome your app is and<br>why they should use it!!</h4></td></tr>
+                <tr>
+                    <td><fieldset><table><tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Get Started</td></tr></table></fieldset></td>
+                    <td><pre>           </pre></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><pre>
+                    </pre></td>
+                </tr>
+                <tr>
+                    <td colspan="5"><pre>
+
+                    </pre></td>
+                </tr>
+            </table>
+        </div>
+        <hr>
+        <section class="block1">
+            <pre>
+
+
+
+
+            </pre>
+            <div class="heading_1">                
+            </div>
+            <div class="Future 1">
+                <table>
+                    <tr>
+                        <td colspan="4"></td>
+                        <td></td>
+                    </tr>
+                    <tr>                        
+                        <td rowspan="4"><pre>                                              </pre></td>
+                        <td rowspan="4"><img src=./image/img2.png alt="img"></td>
+                        <td rowspan="4"><pre>          </pre></td>
+                        <td colspan="2"><h2>Feature 1</h2></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><h4>Explanation of why you are going to love it<br>and the better!</h4></td></tr>
+                    <tr>
+                        <td><fieldset><table><tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Learn More</td></tr></table></fieldset></td>
+                        <td><pre>           </pre></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><pre>
+                        </pre></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"><pre>
+    
+                        </pre></td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <hr>
+        <section class="block2">
+            <div class="heading_2">                
+            </div>
+            <div class="Feature 2">
+                <table>
+                    <tr>
+                        <td colspan="4"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td rowspan="4"><pre>                                              </pre></td>
+                        <td colspan="2"><h2>Feature 2</h2></td>
+                        <td rowspan="4"><pre>          </pre></td>
+                        
+                        <td rowspan="4"><img src=./image/img2.png alt="img"></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><h4>Explanation of why you are going to love it<br>and the better!</h4></td></tr>
+                    <tr>
+                        <td><fieldset><table><tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Learn More</td></tr></table></fieldset></td>
+                        <td><pre>           </pre></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><pre>
+                        </pre></td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"><pre>
+    
+                        </pre></td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+        <hr>
+        <section class="block3">
+            <pre>
+
+            </pre>
+            <div class="heading_3">                
+            </div>
+            <div class="Happy Customers">
+                <table>
+                    <tr>
+                        <td><pre>                                                                                      </pre></td>
+                        <td><h2>Happy Customers</h2></td>
+                    </tr>
+                    <tr>
+                        <td><pre>                                                                                           </pre></td>
+                        <td><h4>They love us! Isn't it oblivous?!</h4></td>
+                    </tr>
+                </table>
+                <table>
+                    <tr>
+                        <td><pre>                    </pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
+                        <td><pre>           </pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
+                        <td><pre>           </pre></td>
+                        <td><img src=./image/img3.png alt="img"></td>
+                    </tr>
+                    <tr>
+                        <td><pre>                    </pre></td>
+                        <td><h2>Case study 1</h2></td>
+                        <td><pre>  </pre></td>
+                        <td><h2>       Case study 2</h2></td>
+                        <td><pre>  </pre></td>
+                        <td><h2>       Case study 3</h2></td>
+                    </tr>
+                </table>
+            </div>
+        </section>        
+    </main>
+    <hr>
+    <section class="block4">
+        <pre>
+
+        </pre>
+        <div class="heading_4">                
+        </div>
+        <div class="Call to action">
+            <table>
+                    <tr>
+                        <td>
+                        <pre>                                                                                   </pre>
+                        </td>
+                        <td><h4>Call to action! You can do it!</h4></td>
+                        <td><fieldset><h4>Get started</h4></fieldset></td>   
+                    </tr>            
+            </table>
+            <br>
+        </div>
+    </section>   
+    <hr> 
+    <footer>
+        <div class="footer">
+            <table>
+                <tr>
+                    <td><h2>Wonder App</h2></td>
+                    <td rowspan="6"><pre>                      </pre></td>
+                    <td><h4>Product</h4></td>
+                    <td rowspan="6"><pre>                      </pre></td>
+                    <td><h4>Solutions</h4></td>
+                    <td rowspan="6"><pre>                      </pre></td>
+                    <td><h4>Customers</h4></td>
+                    <td rowspan="6"><pre>                      </pre></td>
+                    <td><h4>Resources</h4></td>
+                    <td rowspan="6"><pre>                      </pre></td>
+                    <td><h4>About Us</h4></td>
+                </tr>
+                    <tr>
+                    <td></td>    
+                    <td><h5>Features</h5></td>
+                    <td><h5>Overview</h5></td>
+                    <td><h5>Highlights</h5></td>
+                    <td><h5>Documentation</h5></td>
+                    <td>Our Company</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><h5>Pricing</h5></td>
+                    <td><h5>Tech</h5></td>
+                    <td><h5>Case Studies</h5></td>
+                    <td><h5>eBooks</h5></td>
+                    <td><h5>Careers</h5></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><h5>Comparison</h5></td>
+                    <td><h5>Government</h5></td>
+                    <td></td>
+                    <td><h5>Podcast</h5></td>
+                    <td><h5>Contact Us</h5></td>
+                </tr>    
+                <tr>
+                    <td></td>
+                    <td><h5>Updates</h5></td>
+                    <td><h5>Non-Profit</h5></td>
+                    <td></td>
+                    <td><h5>Blog</h5></td>
+                     <td><h5>News</h5></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><h5>Financial Services</h5></td>
+                    <td></td>
+                    <td><h5>Resources</h5></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td colspan="11"><pre>
+
+
+
+                    </pre></td>
+                </tr>
+            </table>
+        </div>
+        <hr>
+        <div class="footer2">
+            <table>
+                <tr>
+                    <td><pre>                                                                                              </pre></td>
+                    <td>(c) 2020 Example, Inc</td>
+                </tr>
+            </table>
+        </div>
+    </footer>
+</body>
+</html>
 ```
 
 Приложение В
